<resources>
    <string name="app_name">Stormbreaker Studios Android Challenge</string>
    <string name="peace_time">Peace Time</string>
    <string name="onboarding_sub_title">Let\'s customize your experience to improve your results</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="preferred_meditation_time">Preferred Meditation Time</string>
    <string name="time_zone">Time Zone</string>
    <string name="save">Save</string>
    <string name="article_of_the_day">Article of the Day</string>
    <string name="just_looking_overrated">Just Looking: Overrated?</string>
    <string name="featured_articles">Fatured Articles</string>
    <string name="title_activity_playlist">PlaylistActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="playlist">Playlist</string>
    <string name="articles">Articles</string>
    <string name="about">About</string>
    <string name="lorem_ipsum_text_1">\"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?\"</string>
</resources>