<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_onboarding_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/graphic_launcher">

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextView.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peace_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10" />

    <TextView
        android:id="@+id/tv_subtitle"
        style="@style/TextView.Subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_default_vertical_margin"
        android:text="@string/onboarding_sub_title"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/et_birth"
        style="@style/BoxedEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_default_vertical_margin"
        android:drawableEnd="@drawable/sl_calendar_icon_selector"
        android:hint="@string/date_of_birth"
        android:onClick="showDatePickerDialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
        app:layout_constraintVertical_bias="0.10" />

    <TextView
        android:id="@+id/et_meditation_time"
        style="@style/BoxedEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_default_vertical_margin"
        android:drawableEnd="@drawable/sl_clock_icon_selector"
        android:hint="@string/preferred_meditation_time"
        android:onClick="showTimePickerDialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_birth"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/et_time_zone"
        style="@style/BoxedEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_default_vertical_margin"
        android:drawableEnd="@drawable/sl_globe_icon_selector"
        android:hint="@string/time_zone"
        android:onClick="showTimeZoneSpinnerDialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_meditation_time"
        app:layout_constraintVertical_bias="0" />

    <Spinner
        android:id="@+id/sp_time_zone"
        style="@style/BoxedEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_default_vertical_margin"
        android:drawableEnd="@drawable/sl_globe_icon_selector"
        android:hint="@string/time_zone"
        android:spinnerMode="dialog"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_meditation_time"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/bt_save"
        style="@style/PrimaryButton"
        android:layout_width="@dimen/button_default_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_default_vertical_margin"
        android:onClick="onBoardSaved"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_time_zone"
        app:layout_constraintVertical_bias="1" />
</androidx.constraintlayout.widget.ConstraintLayout>